--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
   <!-- don't forget to remove this >>>>(google tag manager) script, if you are using this page/code -->
   <!-- Google tag (gtag.js) -->
+  <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-YMWDE0VTD3"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -88,24 +89,30 @@
             </a>
           </li>
 
-          <li class="about" class="navbar-tabs-li" data-aos="fade-down" data-aos-delay="500">
+          <li class="education" class="navbar-tabs-li" data-aos="fade-down" data-aos-delay="500">
             <a href="#education" aria-label="about menu button">
               &#60;/Education&#62;
             </a>
           </li>
 
-          <li class="skills" class="navbar-tabs-li" data-aos="fade-down" data-aos-delay="700">
+          <li class="experience" class="navbar-tabs-li" data-aos="fade-down" data-aos-delay="700">
+            <a href="#experience" aria-label="about menu button">
+              &#60;/Experience&#62;
+            </a>
+          </li>
+
+          <li class="skills" class="navbar-tabs-li" data-aos="fade-down" data-aos-delay="900">
             <a href="#skills" aria-label="skills menu button">
               &#60;/Skills&#62;
             </a>
           </li>
 
-          <li class="projects" class="navbar-tabs-li" data-aos="fade-down" data-aos-delay="900">
+          <li class="certificate" class="navbar-tabs-li" data-aos="fade-down" data-aos-delay="1100">
             <a href="#certificate" aria-label="projects menu button">
               &#60;/Certificate&#62;
             </a>
           </li>
-          <li class="projects" class="navbar-tabs-li" data-aos="fade-down" data-aos-delay="1100">
+          <li class="projects" class="navbar-tabs-li" data-aos="fade-down" data-aos-delay="1300">
             <a href="#projects" aria-label="projects menu button">
               &#60;/Projects&#62;
             </a>
@@ -249,9 +256,9 @@
 
     </section>
     <!-- landing page ends here -->
-    <section class="skills-section-container" id="about" >
+    <section class="skills-section-container" id="about">
       <div class="skills-section">
-        <div class="section-heading"data-aos="fade-up">
+        <div class="section-heading" data-aos="fade-up">
           <h2 class="section-heading-article" tabindex="0" aria-label="About me heading">
             &#60;/AboutMe&#62;
           </h2>
@@ -298,9 +305,9 @@
     <!-- about section ends  -->
 
 
-    <section class="skills-section-container" id="education" >
+    <section class="skills-section-container" id="education">
       <div class="skills-section">
-        <div class="section-heading"data-aos="fade-up">
+        <div class="section-heading">
           <h2 class="section-heading-article" tabindex="0" aria-label="About me heading">
             &#60;/Education&#62;
           </h2>
@@ -308,25 +315,111 @@
         </div>
 
         <div class="about-info">
+          <a href="https://www.svitvasad.ac.in/" target="_blank" style="text-decoration: none;">
+
+            <h2 class="section-heading-article">
+              SVIT-Vasad (2019-2023)
+            </h2>
+          </a>
+          </br>
           <p tabindex="0">
-            Hi! My name is Mohit. I'm a web developer. I love creating things that exist on the internet. My interest
-            in web development started in 2019.
+
+            Svit Vasad College stands out with its commitment to academic excellence and holistic development. Nestled
+            in a serene environment, it offers a wide range of courses and modern facilities. The college fosters a
+            dynamic learning atmosphere, preparing students for success in their chosen fields.
           </p>
           <br />
-          <p tabindex="0">
-            Instead of creating an online Concepts Art website, i started
-            enjoying web development. Creating custom things for web taught
-            me a lot about design & development!
-          </p>
           <br />
+          <h2 class="section-heading-article">
+            Jay Ambe group of school (2015-2019)
+          </h2>
+          </br>
           <p tabindex="0">
-            My main focus these days is building interesting & creative web
-            designs, I like to code things from scratch, and enjoy bringing
-            ideas to life in the browser.
+            Jay Ambe School is a prestigious school that offers a range of programs in a variety of fields. The school
+            is located in a historic town known for its academic excellence and diverse student body.
           </p>
           <!-- Resume button -->
         </div>
       </div>
+    </section>
+
+    <section class="projects-section-container" id="experience">
+      <div class="projects-section-div">
+        <div class="section-heading" data-aos="fade-up">
+          <h2 class="section-heading-article" tabindex="0" aria-label="My projects starts from here">
+            &#60;/Experience&#62;
+          </h2>
+          <p class="sectionHeadingP"></p>
+        </div>
+        <div class="project-boxes-div">
+          <div data-aos="fade-up" class="project-box-wrapper">
+            <div class="project-box project-box2" id="project-box2">
+              <div class="info-div">
+                <!-- <img src="src/webp/pexelicon-favicon.webp" alt="pexelicon website favicon" class="faviconforProject" /> -->
+                <a href="https://arthtechnology.com/index.html" target="_blank" style="text-decoration: none;">
+                  <p class="ProjectHead">Arth Technologies</p>
+                </a>
+                <p class="ProjectDescription">
+                  Arth Technology is Vadodara, Gujarat (India) Based Software Development Company specialized in Custom
+                  Software Development, Website Development, Mobile Application Development, Search Engine Optimization,
+                  Digital Marketing, and IT Consulting.
+                </p>
+                <div class="project-buttons">
+                  <a href="https://www.linkedin.com/company/arthtechnology/" target="_blank">
+                    <img src="./src/png/linkedin.png" alt="linkedin" style="width: 50px;" />
+                  </a>
+                  <a href="./src/pdf/cc-arth tech.pdf" target="_blank" class="cta" aria-label="Visit Pexelicons Live">
+                    <span>view</span>
+                    <svg viewBox="0 0 13 10" height="10px" width="15px">
+                      <path d="M1,5 L11,5"></path>
+                      <polyline points="8 1 12 5 8 9"></polyline>
+                    </svg>
+                  </a>
+                </div>
+              </div>
+              <div class="image-div">
+                <img src="src/pdf/cc-arth.jpg" alt="Pexelicon website preview image" />
+              </div>
+            </div>
+          </div> <!-- certificate -->
+          <!-- ---------------------- -->
+          <!-- ---------------------- -->
+
+        </div>
+        <div class="project-boxes-div">
+          <div data-aos="fade-up" class="project-box-wrapper">
+            <div class="project-box project-box2" id="project-box2">
+              <div class="info-div">
+                <!-- <img src="src/webp/pexelicon-favicon.webp" alt="pexelicon website favicon" class="faviconforProject" /> -->
+                <a href="https://www.brainybeam.com/" target="_blank" style="text-decoration: none;">
+                  <p class="ProjectHead">BrainyBeam Technologies</p>
+                </a>
+                <p class="ProjectDescription">
+                  BrainyBeam Technologies Pvt Ltd has been a leading web and mobile app development company since 2010,
+                  serving clients across India and the USA. We specialize in creating solutions for various sectors,
+                  including Healthcare, Retail, and Education, with expertise in IoT, secure products, and more. Our
+                  dedicated team ensures top-quality, timely delivery, and competitive pricing, with offices in
+                  Ahmedabad and the USA.
+                </p>
+                <div class="project-buttons">
+                  <a href="https://www.linkedin.com/company/brainybeam-technologies-pvt-ltd/" target="_blank">
+                    <img src="./src/png/linkedin.png" alt="linkedin" style="width: 50px;" />
+                  </a>
+                  <a href="./src/pdf/Brainybeam.pdf" target="_blank" class="cta" aria-label="Visit Pexelicons Live">
+                    <span>view</span>
+                    <svg viewBox="0 0 13 10" height="10px" width="15px">
+                      <path d="M1,5 L11,5"></path>
+                      <polyline points="8 1 12 5 8 9"></polyline>
+                    </svg>
+                  </a>
+                </div>
+              </div>
+              <div class="image-div">
+                <img src="src/pdf/Brainybeam.jpg" alt="Pexelicon website preview image" />
+              </div>
+            </div>
+          </div> <!-- certificate -->
+        </div>
     </section>
 
 
