add experience section

--- a/index.html
+++ b/index.html
@@ -149,6 +149,16 @@
             &#60;/AboutMe&#62;
           </a>
         </li>
+        <li id="skills-mobile-tab" class="mobile-navbar-tabs-li education" onclick="hidemenubyli()">
+          <a href="#education" tabindex="0" aria-label="skills menu button">
+            &#60;/Education&#62;
+          </a>
+        </li>
+        <li id="skills-mobile-tab" class="mobile-navbar-tabs-li experience" onclick="hidemenubyli()">
+          <a href="#experience" tabindex="0" aria-label="skills menu button">
+            &#60;/Experience&#62;
+          </a>
+        </li>
         <li id="skills-mobile-tab" class="mobile-navbar-tabs-li skills" onclick="hidemenubyli()">
           <a href="#skills" tabindex="0" aria-label="skills menu button">
             &#60;/Skills&#62;
