change email id

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
           thoughtful interactions.
         </p>
         <div class="contact-btn-div" data-aos="fade-up" data-aos-delay="800">
-          <a href="mailto:infoMohitparmar@gmail.com" tabindex="-1">
+          <a href="mailto:mparmar34817@gmail.com" tabindex="-1">
             <button class="letsTalkBtn">
               <p class="letsTalkBtn-text">Let's Talk!</p>
               <span class="letsTalkBtn-BG"></span>
