--- a/index.html
+++ b/index.html
@@ -627,7 +627,40 @@
                   </a>
                   <a href="https://github.com/mohit08-tech/hostel-management-system" target="_blank" class="cta"
                     aria-label="Visit Pexelicons Live">
-                    <span>Live view</span>
+                    <span>GitHub link</span>
+                    <svg viewBox="0 0 13 10" height="10px" width="15px">
+                      <path d="M1,5 L11,5"></path>
+                      <polyline points="8 1 12 5 8 9"></polyline>
+                    </svg>
+                  </a>
+                </div>
+              </div>
+              <div class="image-div">
+                <img src="src/webp/hostel mgn.png" alt="Pexelicon website preview image" />
+              </div>
+            </div>
+          </div> <!-- Hostel management  -->
+          <!-- ---------------------- -->
+
+
+        </div>
+        <div class="project-boxes-div">
+          <div data-aos="fade-up" class="project-box-wrapper">
+            <div class="project-box project-box2" id="project-box2">
+              <div class="info-div">
+                <!-- <img src="src/webp/pexelicon-favicon.webp" alt="pexelicon website favicon" class="faviconforProject" /> -->
+                <article class="ProjectHeading">To do list webApp</article>
+                <p class="ProjectDescription">
+                  To do list website- A website to handle all task information
+                </p>
+                <div class="project-buttons">
+                  <a href="https://github.com/mohit08-tech/todo-list" target="_blank"
+                    class="github-redirect" aria-label="Visit Pexelicons on GitHub">
+                    <img src="src/svg/github.svg" alt="github redirect button" />
+                  </a>
+                  <a href="https://github.com/mohit08-tech/hostel-management-system" target="_blank" class="cta"
+                    aria-label="Visit Pexelicons Live">
+                    <span>GitHub link</span>
                     <svg viewBox="0 0 13 10" height="10px" width="15px">
                       <path d="M1,5 L11,5"></path>
                       <polyline points="8 1 12 5 8 9"></polyline>
