ADD NEW PROJECT

--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
                     class="github-redirect" aria-label="Visit Pexelicons on GitHub">
                     <img src="src/svg/github.svg" alt="github redirect button" />
                   </a>
-                  <a href="https://github.com/mohit08-tech/hostel-management-system" target="_blank" class="cta"
+                  <a href="https://github.com/mohit08-tech/todo-list" target="_blank" class="cta"
                     aria-label="Visit Pexelicons Live">
                     <span>GitHub link</span>
                     <svg viewBox="0 0 13 10" height="10px" width="15px">
@@ -669,7 +669,7 @@
                 </div>
               </div>
               <div class="image-div">
-                <img src="src/webp/hostel mgn.png" alt="Pexelicon website preview image" />
+                <img src="src/webp/todolist.png" alt="Pexelicon website preview image" />
               </div>
             </div>
           </div> <!-- Hostel management  -->
